Fix bug not showing arrows on desktop

--- a/src/components/arrow/arrow.module.css
+++ b/src/components/arrow/arrow.module.css
@@ -19,8 +19,10 @@
 	border-radius: 50%;
 }
 
-.arrowButton:not(.showOnMobile) {
-	display: none;
+@media only screen and (max-width: 768px) {
+	.arrowButton:not(.showOnMobile) {
+		display: none;
+	}
 }
 
 .right {
